# backend/src/routes/auth.js
@@ -1,0 +1,11 @@
+const { Router } = require("express");
+const { login, updateCredentials } = require("../controllers/authController");
+
+const router = Router();
+
+router.post("/login", login);
+router.put("/credentials", updateCredentials);
+
+module.exports = router;
+
+
